# circuit-simulator

./: CMakeLists.txt  README.md
docs/learning diaries/: ExternalLibraries.md  ModernCmake.md  NamingConvention.md  ProjectArchitecture.md  modern cmake
docs/logs/: notes.md
include/: Circuit.hpp  Component.hpp  Node.hpp
tests/: CMakeLists.txt
